# image-deduper

./: .bacon.toml  .gitignore  Cargo.toml  README.md  dev_notes.md
crates/image-deduper-cli/: Cargo.toml  cli.rs
crates/image-deduper-cli/src/: main.rs
crates/image-deduper-core/: .gitignore  Cargo.toml  config.rs  errors.rs  image-deduper.db  image-deduper.db-shm  lib.rs  type_defs.rs
crates/image-deduper-core/docs/mermaid/: core-architecture.mmd  test.md
crates/image-deduper-core/examples/: discover.rs  fixsuffix.rs  generate_test_images.rs  peep_db.rs  scan_and_hash.rs  simple_scan.rs  test_discover.rs  test_discovery.rs  test_enhanced_hash.rs  test_image_registry_demo.rs  test_logging.rs  test_metal_batch.rs  test_metal_gpu.rs  test_processing.rs
crates/image-deduper-core/src/: config.rs  discovery.rs  error.rs  lib.rs  logging.rs  safety.rs  simple_deduper.rs  test_support.rs  types.rs
crates/image-deduper-core/src/deduplication/: mod.rs
crates/image-deduper-core/src/discovery/: mod.rs
crates/image-deduper-core/src/discovery/tests/: file_metadata_tests.rs  file_system_tests.rs  mod.rs  real_image_tests.rs  test_utils.rs
crates/image-deduper-core/src/persistence/: README.md  db.rs  error.rs  mod.rs  models.rs  tests.rs
crates/image-deduper-core/src/processing/: batch_processor.rs  core.rs  crypto_hash.rs  cryptographic.rs  file_processing.rs  file_validation.rs  gpu_accelerated.rs  hash_processing.rs  memory_management.rs  metal_phash.rs  mod.rs  perceptual.rs  process_images.rs  processing_tests.rs  progress.rs  tests.rs  timeout_utils.rs  types.rs
crates/image-deduper-core/src/processing/crypto_hash/: mod.rs
crates/image-deduper-core/src/processing/formats/: heic.rs  jpeg.rs  mod.rs  png.rs  raw.rs  tiff.rs
crates/image-deduper-core/src/processing/gpu/: gpu_accelerated.rs  metal_phash.rs  mod.rs
crates/image-deduper-core/src/processing/perceptual_hash/: mod.rs
crates/image-deduper-core/src/processing/platform/: macos.rs  mod.rs
crates/image-deduper-core/src/processing/utils/: batch_processor.rs  file_validation.rs  hash_computation_with_timeout.rs  image_processor.rs  mod.rs  progress.rs
crates/image-deduper-core/src/test_utils/: bench_testing.rs  mod.rs
crates/image-deduper-core/src/utils/: bench.rs  mod.rs
crates/image-deduper-core/tests/: image_variants_tests.rs  mod.rs
crates/image-deduper-core/tests/common/: README.md  image_variants.rs  mod.rs  test_image_registry.rs  test_images.rs
crates/image-deduper-core/tests/data/: README.md
crates/image-deduper-core/tests/discovery/: create_test_images.rs  file_metadata_tests.rs  file_system_tests.rs  mod.rs  real_image_tests.rs
crates/image-deduper-core/tests/processing/: cryptographic_tests.rs  mod.rs  perceptual_tests.rs  processor_tests.rs
crates/image-deduper-core/tests/test_images/: README.md  image4.heic
tests/: mod.rs
tools/: create_test_images.sh
