[workspace]
members = ["crates/image-deduper-core", "crates/image-deduper-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Richard Lyon <richlyon@fastmail.com>"]
license = "MIT"
repository = "https://github.com/yourusername/image-deduper"

[workspace.dependencies]
# Shared dependencies with fixed versions
clap = { version = "4.4", features = ["derive"] }
walkdir = "2.3"
rayon = "1.8"
image = "0.24"
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.29"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
crossbeam = "0.8"
libheif-rs = "0.18"
thiserror = "1.0"
