[package]
name = "image-deduper-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for detecting and managing duplicate images"

[dependencies]

# Error handling
thiserror.workspace = true

# File handling and traversal
walkdir.workspace = true

# Image processing
libheif-rs.workspace = true
image.workspace = true
metal = "0.27.0"
objc = "0.2.7"

# Hashing
blake3.workspace = true
rustdct = "0.7.1"
ndarray = "0.16.1"

# Serialization
serde.workspace = true
serde_json.workspace = true

# Database
rocksdb = "0.21.0"

# Concurrency and async
crossbeam.workspace = true
rayon.workspace = true
num_cpus = "1.16"
ctrlc = "3.4.1"
once_cell = "1.19.0"       # For lazy initialization

# Progress bars
indicatif = "0.17"

# Logging
log.workspace = true
env_logger.workspace = true
chrono = "0.4.40"
log4rs = "1.3.0"

[dev-dependencies]
image.workspace = true
tempfile = "3.18.0"
once_cell = "1.19.0"   # For lazy initialization

[features]
default = []
